added gc debugging options to be used while launching spark